# acerc11xdrv

./: CMakeLists.txt  PROTOCOL.md  README.md  index.html
cmake/modules/: FindOpenCV.cmake
doc/: CMakeLists.txt  Doxyfile.in
example-data/control-brightness/: high.widget  low.widget  maximum.widget  medium.widget
example-data/pictures/: black.jpg.widget  green.jpg.widget
specs/: chip.html  lsusb_acerc110_mass_storage.txt  lsusb_acerc110_projector_mode.txt
src/: CMakeLists.txt  Data.cpp  Data.h  ImageMagickData.cpp  ImageMagickData.h  USB.cpp  USB.h  createbrightnesswidget.cpp  createpicturewidget.cpp  mainpage_acerc11xdrv.h  showpic.cpp  util.cpp  util.h
src/lib/: Exception.cpp  Exception.h  FrameCounter.cpp  FrameCounter.h  ImageMagickData.cpp  ImageMagickData.h  Projector.h  Projector.tpp  ProjectorC110.cpp  ProjectorC110.h  ScreenshotImport.h  ScreenshotImport.tpp  ScreenshotImportX11.cpp  ScreenshotImportX11.h  USB.cpp  USB.h  USBData.cpp  USBData.h  util.cpp  util.h
src/tests/: CMakeLists.txt  test_data.cpp  test_usbdata.cpp  testing_helper.h.in
src/tools/: createbrightnesswidget.cpp  createpicturewidget.cpp  daemon.cpp  getScreenshot.cpp  showpic.cpp
various/eclipse-code-formatting/: profile.xml
windowsdriver/c110/: AcerLaptopCheck.bat  autorun.inf
